--- a/gb/19/5/16/n11261808.md
+++ b/gb/19/5/16/n11261808.md
@@ -1,68 +1,62 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ijbtww307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ijbtww307/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ijbtww307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ijbtww307/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ijbtww307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ijbtww307/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ijbtww307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ijbtww307/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ijbtww307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ijbtww307/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ijbtww307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ijbtww307/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ijbtww307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ijbtww307/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ijbtww307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ijbtww307/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ijbtww307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ijbtww307/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ijbtww307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ijbtww307/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ijbtww307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ijbtww307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ijbtww307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ijbtww307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>运动也能做环保！“拾荒慢跑”全球响应</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/05/019-05-1611.23-600x400.jpg" />
 <h6>Erik Ahlstrom：“这个想法是来自于我之前住在阿尔（Are）的一个滑雪胜地，我常常在那里捡垃圾。后来我搬回斯德哥尔摩，我已经20年没有住在这里了，我发现这里有很多垃圾。我和朋友在慢跑的时候，经过一些社区、看到一些正在发生的事情，当你开始跑步的时候，产生了肾上腺素和脑内啡，捡垃圾变得像寻宝一样。”（授权影片截图）
 </h6>
 <hr>
-<p>【大纪元2019年05月16日讯】相信不少人走在大街小巷看到满地的垃圾或烟蒂，曾摇头叹息脏乱的环境。现在瑞典有一群人带领一种新式的慢跑活动“<ahref="https://github.com/ijbtww307/djy/blob/master/gb/tag/%E6%8B%BE%E8%8D%92%E6%85%A2%E8%B7%91.md#1">拾荒慢跑</a>”，参与的跑者们，人人随身携带垃圾袋，随手捡起路上的垃圾，不仅达到运动健身，还能拯救环境做环保。</p>
-<p><ahref="https://github.com/ijbtww307/djy/blob/master/gb/tag/%E6%8B%BE%E8%8D%92%E6%85%A2%E8%B7%91.md#1">拾荒慢跑</a>“Plogging”是由瑞典语捡起“plocka upp”和慢跑“jogging”结合而成。参与慢跑的跑者们，人人随身携带垃圾袋，随手捡起路边的垃圾，搜集满袋后，再将垃圾倒在起点附近的垃圾桶中。</p>
-<figure id="attachment_11261837" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/05/19-05-1611.22.jpg"><img class="size-large wp-image-11261837" src="https://i.epochtimes.com/assets/uploads/2019/05/19-05-1611.22-600x336.jpg" alt="" width="600" b="336" /></a><figcaption class="wp-caption-text">Lena Lagerljung：“我必须做像这样的事，这是符合我这个年龄可以做的事。”（授权影片截图）</figcaption></figure>
+<p>【大纪元2019年05月16日讯】相信不少人走在大街小巷看到满地的垃圾或烟蒂，曾摇头叹息脏乱的环境。现在瑞典有一群人带领一种新式的慢跑活动“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%8B%BE%E8%8D%92%E6%85%A2%E8%B7%91.md#1">拾荒慢跑</a>”，参与的跑者们，人人随身携带垃圾袋，随手捡起路上的垃圾，不仅达到运动健身，还能拯救环境做环保。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%8B%BE%E8%8D%92%E6%85%A2%E8%B7%91.md#1">拾荒慢跑</a>“Plogging”是由瑞典语捡起“plocka upp”和慢跑“jogging”结合而成。参与慢跑的跑者们，人人随身携带垃圾袋，随手捡起路边的垃圾，搜集满袋后，再将垃圾倒在起点附近的垃圾桶中。</p>
+<figure id="attachment_11261837" aria-describedby="caption-attachment-11261837" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/05/19-05-1611.22.jpg"><img class="size-large wp-image-11261837" src="https://i.epochtimes.com/assets/uploads/2019/05/19-05-1611.22-600x336.jpg" alt="" width="600" b="336" /></a><figcaption id="caption-attachment-11261837" class="wp-caption-text">Lena Lagerljung：“我必须做像这样的事，这是符合我这个年龄可以做的事。”（授权影片截图）</figcaption></figure>
 <p>“拾荒慢跑”跑者Lena Lagerljung：“我必须做像这样的事，这是符合我这个年龄可以做的事。”</p>
 <p>“拾荒慢跑”这项有意义的运动已经在欧洲流行起来，逐渐响应到全世界，墨西哥首都墨西哥城，有着一天4千人参与的世界纪录，在印度则有最大的慢跑热潮，“拾荒慢跑”可能会上看1万人。</p>
-<figure id="attachment_11261838" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/05/2019-05-1611.26.jpg"><img class="size-large wp-image-11261838" src="https://i.epochtimes.com/assets/uploads/2019/05/2019-05-1611.26-600x335.jpg" alt="" width="600" b="335" /></a><figcaption class="wp-caption-text">参与的跑者们，人人随身携带垃圾袋，随手捡起路上的垃圾，不仅达到运动健身，还能拯救环境做环保。（授权影片截图）</figcaption></figure>
-<p>“拾荒慢跑”发起人Erik Ahlstrom：“这个想法是来自于我之前住在阿尔（Are）的一个滑雪胜地，我常常在那里<ahref="https://github.com/ijbtww307/djy/blob/master/gb/tag/%E6%8D%A1%E5%9E%83%E5%9C%BE.md#1">捡垃圾</a>。后来我搬回斯德哥尔摩，我已经20年没有住在这里了，我发现这里有很多垃圾。我和朋友在慢跑的时候，经过一些社区、看到一些正在发生的事情，当你开始跑步的时候，产生了肾上腺素和脑内啡，捡垃圾变得像寻宝一样。”</p>
-<figure id="attachment_11261840" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/05/32019-05-1611.24.jpg"><img class="size-large wp-image-11261840" src="https://i.epochtimes.com/assets/uploads/2019/05/32019-05-1611.24-600x336.jpg" alt="" width="600" b="336" /></a><figcaption class="wp-caption-text">Erik Ahlstrom：“这个想法是来自于我之前住在阿尔（Are）的一个滑雪胜地，我常常在那里<ahref="https://github.com/ijbtww307/djy/blob/master/gb/tag/%E6%8D%A1%E5%9E%83%E5%9C%BE.md#1">捡垃圾</a>。”（授权影片截图）</figcaption></figure>
-<p>在慢跑过程中，试着找出最奇怪的垃圾或最有价值的垃圾也是跑者的乐趣之一。<ahref="https://github.com/ijbtww307/djy/blob/master/gb/tag/%E7%BB%B4%E6%8A%A4%E7%8E%AF%E5%A2%83.md#1">维护环境</a>人人有责，从不丢垃圾到随手捡起垃圾，无论我们身处何处，都能为地球尽上一份心力。</p>
-<p><center><a class="no-margin" src="https://www.youmaker.com/2019/0516/928f60cb-5f07-415f-6828-4075dd6c7fc3?r=16x9&amp;s=1280x720&amp;d=104" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen"></a></center>责任编辑：陈安</p>
+<figure id="attachment_11261838" aria-describedby="caption-attachment-11261838" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/05/2019-05-1611.26.jpg"><img class="size-large wp-image-11261838" src="https://i.epochtimes.com/assets/uploads/2019/05/2019-05-1611.26-600x335.jpg" alt="" width="600" b="335" /></a><figcaption id="caption-attachment-11261838" class="wp-caption-text">参与的跑者们，人人随身携带垃圾袋，随手捡起路上的垃圾，不仅达到运动健身，还能拯救环境做环保。（授权影片截图）</figcaption></figure>
+<p>“拾荒慢跑”发起人Erik Ahlstrom：“这个想法是来自于我之前住在阿尔（Are）的一个滑雪胜地，我常常在那里<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%8D%A1%E5%9E%83%E5%9C%BE.md#1">捡垃圾</a>。后来我搬回斯德哥尔摩，我已经20年没有住在这里了，我发现这里有很多垃圾。我和朋友在慢跑的时候，经过一些社区、看到一些正在发生的事情，当你开始跑步的时候，产生了肾上腺素和脑内啡，捡垃圾变得像寻宝一样。”</p>
+<figure id="attachment_11261840" aria-describedby="caption-attachment-11261840" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/05/32019-05-1611.24.jpg"><img class="size-large wp-image-11261840" src="https://i.epochtimes.com/assets/uploads/2019/05/32019-05-1611.24-600x336.jpg" alt="" width="600" b="336" /></a><figcaption id="caption-attachment-11261840" class="wp-caption-text">Erik Ahlstrom：“这个想法是来自于我之前住在阿尔（Are）的一个滑雪胜地，我常常在那里<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%8D%A1%E5%9E%83%E5%9C%BE.md#1">捡垃圾</a>。”（授权影片截图）</figcaption></figure>
+<p>在慢跑过程中，试着找出最奇怪的垃圾或最有价值的垃圾也是跑者的乐趣之一。<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BB%B4%E6%8A%A4%E7%8E%AF%E5%A2%83.md#1">维护环境</a>人人有责，从不丢垃圾到随手捡起垃圾，无论我们身处何处，都能为地球尽上一份心力。</p>
+<p><center><a class="no-margin" src=""></a><a href="https://duxu97yt14q37.cloudfront.net/Q5zdP342u"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/2019/0516/928f60cb-5f07-415f-6828-4075dd6c7fc3?r=16x9&amp;s=1280x720&amp;d=104" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen"></a></center>责任编辑：陈安</p>
 <p>改文</p>
 
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ijbtww307/djy/blob/master/gb/19/4/26/n11215581.md#1">金山万里海域大量垃圾 渔民无法出海</a></li>
-<li><a href="https://github.com/ijbtww307/djy/blob/master/gb/19/4/28/n11219423.md#1">春季净滩护海洋  屏东千人热烈响应</a></li>
-<li><a href="https://github.com/ijbtww307/djy/blob/master/gb/19/5/15/n11259878.md#1">俄勒冈州禁用导致树木死亡的除草剂</a></li>
-<li><a href="https://github.com/ijbtww307/djy/blob/master/gb/19/5/15/n11260465.md#1">中火109年应减煤4成? 环团批市府有法不依</a></li>
-<li><a href="https://github.com/ijbtww307/djy/blob/master/gb/19/5/15/n11260534.md#1">竹县社区规划打造绿生活 传递安居乐业心愿</a></li>
-<li><a href="https://github.com/ijbtww307/djy/blob/master/gb/19/5/15/n11260755.md#1">台电动机车产量9.1万辆 创历史新高</a></li>
-<li><a href="https://github.com/ijbtww307/djy/blob/master/gb/20/10/7/n12459589.md#1">男子兰屿海边捡到黑石头 鉴定是龙涎香</a></li>
-<li><a href="https://github.com/ijbtww307/djy/blob/master/gb/20/9/14/n12402327.md#1">黑犬挖“大金块” 主人傻眼：2年心血差点没了</a></li>
-<li><a href="https://github.com/ijbtww307/djy/blob/master/gb/20/8/21/n12348406.md#1">离奇火警 桶装水经阳光照射聚焦烧毁机车坐垫</a></li>
-<li><a href="https://github.com/ijbtww307/djy/blob/master/gb/20/7/24/n12280460.md#1">日本小花童出场“疲劳驾驶”睡翻 宾客笑到喷泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/4/26/n11215581.md#1">金山万里海域大量垃圾 渔民无法出海</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/4/28/n11219423.md#1">春季净滩护海洋  屏东千人热烈响应</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/5/15/n11259878.md#1">俄勒冈州禁用导致树木死亡的除草剂</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/5/15/n11260465.md#1">中火109年应减煤4成? 环团批市府有法不依</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/5/15/n11260534.md#1">竹县社区规划打造绿生活 传递安居乐业心愿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/5/15/n11260755.md#1">台电动机车产量9.1万辆 创历史新高</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/1/17/n13510304.md#1">被机车排气管烫出“爱台湾”奇葩图案 网友全笑翻</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/24/n13456895.md#1">斯里兰卡男子放风筝被拉到9米空中 场面惊险</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/6/n13419094.md#1">火车误点军校生站半小时 网赞“最美人形立牌”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/6/22/n13038188.md#1">迷路鹦鹉叩窗求救  员警惊叹：真有灵性</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/28/n10879954.md#1" target="_blank">林辉：共产党国家的“作秀公审”</a></li><li><a href="https://github.com/ijbtww307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/31/n11014025.md#1" target="_blank">绝处逢生 79岁老军医讲述的亲身经历</a></li>
-<hr>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/25/n11546701.md#1" target="_blank">林辉：中共70年来杀了多少人？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/1/n10946163.md#1" target="_blank">新加坡法轮功学员修炼故事 真善忍改变人心</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/bmufir3991/djy/blob/master/gb/20/10/3/n12449841.md#1">《圣经》与《推背图》预言的应验与变换9</a></li>
-<li><a href="https://github.com/bmufir3991/djy/blob/master/gb/20/11/28/n12581077.md#1">前世今生一个女人两度转变他的人生</a></li>
-<li><a href="https://github.com/bmufir3991/djy/blob/master/gb/20/11/27/n12580382.md#1">刘伯温说寓言 如何面对权术威胁</a></li>
-<li><a href="https://github.com/bmufir3991/djy/blob/master/gb/20/11/20/n12563507.md#1">【成吉思汗】花剌子模灭国 丘处机道破天机</a></li>
-<li><a href="https://github.com/bmufir3991/djy/blob/master/gb/20/12/4/n12596113.md#1">【馨香雅句】开启中国服饰文化的竟是她</a></li>
-<li><a href="https://github.com/bmufir3991/djy/blob/master/gb/20/12/7/n12602291.md#1">【重播】蓬佩奥就中共挑战美国发表演讲</a></li>
-<li><a href="https://github.com/bmufir3991/djy/blob/master/gb/20/12/9/n12606761.md#1">【财商天下】史上最难就业季 中共推上山下乡2.0</a></li>
-<li><a href="https://github.com/bmufir3991/djy/blob/master/gb/20/12/7/n12602384.md#1">川普：未来几天有很多“大事”发生</a></li>
-<li><a href="https://github.com/bmufir3991/djy/blob/master/gb/20/12/8/n12603635.md#1">【大选更新12.8】德州起诉四摇摆州</a></li>
-<li><a href="https://github.com/bmufir3991/djy/blob/master/gb/20/12/8/n12604360.md#1">中共女特务暴露逃回国 曾跟多名美政客暧昧</a></li>
-<li><a href="https://github.com/bmufir3991/djy/blob/master/gb/20/12/7/n12602498.md#1">孙俪成大陆考生人物素描题 美貌皆非网友笑翻</a></li>
-<li><a href="https://github.com/bmufir3991/djy/blob/master/gb/20/12/7/n12600656.md#1">Sana曾与确诊者请夏接触 TWICE全员接受检疫</a></li>
-<li><a href="https://github.com/bmufir3991/djy/blob/master/gb/20/12/7/n12600579.md#1">TWICE于MAMA获两奖 唱新歌登热搜与收视冠军</a></li>
-<li><a href="https://github.com/bmufir3991/djy/blob/master/gb/20/12/7/n12602271.md#1">游戏环节并列两岸旗帜 韩综《RM》辱华？</a></li>
-<li><a href="https://github.com/bmufir3991/djy/blob/master/gb/20/12/7/n12601101.md#1">杨铭威加盟《俗女2》 与原班底演员齐亮相</a></li>
-<li><a href="https://github.com/bmufir3991/djy/blob/master/gb/20/12/7/n12600354.md#1">神秘金属柱子如雨后春笋 英国小岛也出现了</a></li>
-<li><a href="https://github.com/bmufir3991/djy/blob/master/gb/20/12/2/n12590942.md#1">燕麦可以当减肥餐  一天该吃多少分量？</a></li>
-<li><a href="https://github.com/bmufir3991/djy/blob/master/gb/20/12/7/n12601879.md#1">2个食疗告别白内障、青光眼 治疗失明更有奇方</a></li>
-<li><a href="https://github.com/bmufir3991/djy/blob/master/gb/20/12/9/n12606110.md#1">前以色列高官：外星人与人类联系 川普知道</a></li>
-<li><a href="https://github.com/bmufir3991/djy/blob/master/gb/20/12/7/n12600868.md#1">史上首次 美太空人采收在外太空种植的萝卜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ijbtww307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ijbtww307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/5/16/n11261808.htm">运动也能做环保！“拾荒慢跑”全球响应</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/5/16/n11261808.htm">运动也能做环保！“拾荒慢跑”全球响应</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ijbtww307/djy/blob/master/gb/19/5/16/n11261808.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ijbtww307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ijbtww307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ijbtww307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ijbtww307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ijbtww307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ijbtww307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ijbtww307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ijbtww307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ijbtww307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ijbtww307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ijbtww307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ijbtww307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ijbtww307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ijbtww307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ijbtww307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ijbtww307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ijbtww307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ijbtww307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ijbtww307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ijbtww307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ijbtww307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ijbtww307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ijbtww307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ijbtww307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ijbtww307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/5/16/n11261808.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
